--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "qiankun": "^2.0.21",
     "vue": "^2.6.11",
     "vue-router": "^3.4.2"
   },
