--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-service": "~4.4.0",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
