--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.6.5",
     "qiankun": "^2.0.21",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.2"
+    "vue-router": "^3.4.2",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
