--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "new:comp": "node ./scripts/generateComp/index",
-    "new:example": "node ./scripts/generateExample/index"
+    "new:example": "node ./scripts/generateExample/index",
+    "babel": "babel packages/jsx/title.jsx -d lib"
   },
   "dependencies": {
     "babel-plugin-syntax-jsx": "^6.18.0",
